--- a/.github/workflows/pythontoandroid.yml
+++ b/.github/workflows/pythontoandroid.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Python to Android
 on:
   push:
     branches: ["main"]
@@ -17,7 +17,7 @@ jobs:
         uses: ArtemSBulgakov/buildozer-action@v1
         id: buildozer
         with:
-          workdir: <specify the directory of the app no don't mention this the app files are in root directory>
+          workdir: NeuralRandom
           buildozer_version: stable
   
       - name: Upload artifacts
